--- a/main.html
+++ b/main.html
@@ -33,9 +33,9 @@
 
 <h2>よく使うページ</h2>
 <div class="grid">
-  <div class="card"><strong><a href="hours.html">外来案内</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
-  <div class="card"><strong><a href="cafepalette.html">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋……</p></div>
-  <div class="card"><strong><a href="yesican.html">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
+  <div class="card"><strong><a href="https://hospinfo-enuei-city.org/hours">外来案内</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
+  <div class="card"><strong><a href="https://hospinfo-enuei-city.org/cafepalette">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋……</p></div>
+  <div class="card"><strong><a href="https://hospinfo-enuei-city.org/yesican">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
 </div>
 <div id="footer"></div>
   <script>
