--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,146 @@
 </head>
 <body>
   <div id="header"></div>
-  <main id="main"></main>
+
+<section class="panel" aria-labelledby="terms-title">
+  <h1 id="terms-title">各ガイドライン・利用規約</h1>
+  <p class="note">最終更新：2024年8月25日</p>
+
+  <!-- 言語タブ -->
+<div class="lang-tabs" role="tablist" aria-label="言語切替">
+  <button type="button" role="tab" id="tab-ja" data-lang="ja" aria-controls="lang-ja" aria-selected="true" class="active">日本語</button>
+  <button type="button" role="tab" id="tab-ko" data-lang="ko" aria-controls="lang-ko" aria-selected="false">한국어</button>
+  <button type="button" role="tab" id="tab-en" data-lang="en" aria-controls="lang-en" aria-selected="false">English</button>
+</div>
+
+<div class="lang-content" id="lang-ja"> … </div>
+<div class="lang-content" id="lang-ko" hidden> … </div>
+<div class="lang-content" id="lang-en" hidden> … </div>
+
+  <!-- === 日本語 === -->
+  <div class="lang-content" id="lang-ja" style="display:block">
+    <h2>Q1. 「歌ってみた」音源は使ってもいい？</h2>
+    <p>個人的・非営利の範囲なら事前連絡は不要です。「<em>外峯 零</em>」という名前を明記して頂ければ大丈夫です。曲の著作権は原曲クリエイターに帰属し、当方は関連する問題に責任を負いません。性的な目的での利用・AI学習/音声生成は禁止、また署名/宣伝/布教/勧誘/売名/顕示目的での利用はお控えください。</p>
+
+    <h2>Q2. ファンアート（形態不問）を作ってもいい？</h2>
+    <p>外峯零のキャラクターデザイン・独自世界観等の利用は <em>個人・非営利</em> に限り許可します。その他用途はご連絡ください。作成いただいたFAは、当方からクレジットを添えて紹介・再掲させていただく場合があります（不都合があればお知らせください）。性的な目的・AI学習/画像生成は禁止です。</p>
+
+    <h2>Q3. 配信の切り抜き動画を作っていい？</h2>
+    <p>収益化なし・コメントOFFを条件にご自由にどうぞ。</p>
+
+    <h2>補足・禁止事項</h2>
+    <ul>
+      <li>性的コンテンツ目的の利用、AI学習（音声/画像/テキスト等）への流用は禁止。</li>
+      <li>署名・宣伝・布教・勧誘・売名・顕示を主目的とする利用は禁止。</li>
+      <li>法令に反する行為や第三者の権利侵害はおやめください。</li>
+    </ul>
+  </div>
+
+  <!-- === 韓国語 === -->
+  <div class="lang-content" id="lang-ko">
+    <h2>Q1. 커버곡 음원을 사용해도 될까요?</h2>
+    <p>개인적 용도로 사용 시에는 별도의 연락이나 허가는 필요하지 않습니다. 크레딧에 <em>“가이네 누르 (外峯 零)”</em>를 표기해 주세요. 곡의 저작권은 원작 크리에이터에게 있으며, 가이네 누르는 일절 책임을 지지 않습니다. 성적 목적의 이용·AI 학습/음성 생성 금지, 서명·선전·포교·권유·마케팅 등 목적의 이용은 지양해 주세요.</p>
+
+    <h2>Q2. 팬아트(형태불문) 만들어도 되나요?</h2>
+    <p>캐릭터 디자인·세계관 등은 개인·비영리 용도에 한해 허가합니다. 그 외 용도는 연락 바랍니다. 제작된 팬아트는 크레딧과 함께 소개·재게시할 수 있습니다(불가 시 알려주세요). 성적 목적·AI 학습/이미지 생성 금지입니다.</p>
+
+    <h2>Q3. 방송 클립 따도 되나요?</h2>
+    <p>수익화 없음·댓글 비허용 조건에서 자유롭게 사용 가능합니다.</p>
+
+    <h2>보충 / 금지사항</h2>
+    <ul>
+      <li>성적 콘텐츠 목적 이용 및 AI 학습(음성/이미지/텍스트 등) 금지.</li>
+      <li>서명·선전·포교·권유·마케팅 등 목적의 이용 금지.</li>
+      <li>법률 위반 행위나 제3자 권리 침해 금지.</li>
+    </ul>
+  </div>
+
+  <!-- === 英語 === -->
+  <div class="lang-content" id="lang-en">
+    <h2>Q1. Can I use Gaine Null vocal cover songs?</h2>
+    <p>For personal, non-commercial use, no prior contact is required. Please credit <em>“Gaine Null (外峯 零)”</em>. Song copyrights belong to the original creators; Gaine Null assume no liability for related issues. Erotic use and AI training/voice generation are strictly prohibited. Do not use for signing, promotion, solicitation, or self-promotion.</p>
+
+    <h2>Q2. Can I make artwork of Gaine Null?</h2>
+    <p>Use of character designs/worldbuilding is permitted for personal, non-commercial purposes only; contact here for other uses. Gaine Null may showcase or repost your fan art with credit (tell us if not permitted). Erotic use and AI training/image generation are prohibited.</p>
+
+    <h2>Q3. Can I make highlight clips?</h2>
+    <p>Allowed as long as they are not monetized and comments are disabled.</p>
+
+    <h2>Additional notes</h2>
+    <ul>
+      <li>No erotic use or AI training (voice/image/text).</li>
+      <li>No use for signing, promotion, solicitation, or self-display.</li>
+      <li>No illegal activity or infringement of third-party rights.</li>
+    </ul>
+  </div>
+</section>
+
+<style>
+.lang-tabs{ display:flex; gap:8px; margin:16px 0; }
+.lang-tabs button{
+  flex:1; padding:8px 12px; border:1px solid var(--line);
+  border-radius:8px; background:#fff; cursor:pointer;
+  font-family:"Inter","Noto Sans JP",sans-serif;
+}
+.lang-tabs button.active{
+  background:var(--accent); color:#fff; border-color:var(--accent);
+}
+.lang-content[hidden]{ display:none; }
+.lang-content{ animation:fade .2s ease-in; }
+@keyframes fade{ from{opacity:0} to{opacity:1} }
+</style>
+
+<script>
+(function(){
+  const tabs = document.querySelectorAll('.lang-tabs [role="tab"]');
+  const panels = document.querySelectorAll('.lang-content');
+  const keyOrder = ['ja','ko','en'];
+
+  function show(lang){
+    // ボタン
+    tabs.forEach(btn=>{
+      const active = btn.dataset.lang === lang;
+      btn.classList.toggle('active', active);
+      btn.setAttribute('aria-selected', active ? 'true' : 'false');
+      btn.tabIndex = active ? 0 : -1;
+    });
+    // パネル
+    panels.forEach(p=>{
+      p.hidden = (p.id !== 'lang-'+lang);
+    });
+    // 記憶
+    try{ localStorage.setItem('termsLang', lang); }catch(e){}
+  }
+
+  // クリック
+  tabs.forEach(btn=>{
+    btn.addEventListener('click', ()=> show(btn.dataset.lang));
+  });
+
+  // キーボード（←→で移動）
+  document.querySelector('.lang-tabs').addEventListener('keydown', (e)=>{
+    const current = document.activeElement.closest('[role="tab"]');
+    if(!current) return;
+    let idx = keyOrder.indexOf(current.dataset.lang);
+    if(e.key === 'ArrowRight'){ idx = (idx+1)%keyOrder.length; e.preventDefault(); }
+    if(e.key === 'ArrowLeft'){ idx = (idx-1+keyOrder.length)%keyOrder.length; e.preventDefault(); }
+    if(idx !== -1){
+      const next = document.querySelector(`[data-lang="${keyOrder[idx]}"]`);
+      if(next){ next.focus(); next.click(); }
+    }
+  });
+
+  // 初期表示（記憶 or JA）
+  let initial = 'ja';
+  try{
+    const saved = localStorage.getItem('termsLang');
+    if(saved && keyOrder.includes(saved)) initial = saved;
+  }catch(e){}
+  show(initial);
+})();
+</script>
+
+  
   <div id="footer"></div>
 
   <script>
@@ -17,7 +156,6 @@
     document.getElementById(id).innerHTML = await res.text();
   }
   loadPart("header", "partials/header.html");
-  loadPart("main", "partials/terms.html");
   loadPart("footer", "partials/footer.html");
   </script>
 </body>
