--- a/terms.html
+++ b/terms.html
@@ -20,7 +20,7 @@
   <button type="button" role="tab" id="tab-en" data-lang="en" aria-controls="lang-en" aria-selected="false">English</button>
 </div>
 
-<div class="lang-content" id="lang-ja"> … </div>
+<div class="lang-content" id="lang-ja" hidden> … </div>
 <div class="lang-content" id="lang-ko" hidden> … </div>
 <div class="lang-content" id="lang-en" hidden> … </div>
 
