--- a/terms.html
+++ b/terms.html
@@ -27,10 +27,15 @@
   <!-- === 日本語 === -->
   <div class="lang-content" id="lang-ja" style="display:block">
     <h2>Q1. 「歌ってみた」音源は使ってもいい？</h2>
-    <p>個人的・非営利の範囲なら事前連絡は不要です。「<em>外峯 零</em>」という名前を明記して頂ければ大丈夫です。曲の著作権は原曲クリエイターに帰属し、当方は関連する問題に責任を負いません。性的な目的での利用・AI学習/音声生成は禁止、また署名/宣伝/布教/勧誘/売名/顕示目的での利用はお控えください。</p>
+    <p>個人的・非営利の範囲なら事前連絡は不要です。「<em>外峯 零</em>」という名前を明記して頂ければ大丈夫です。<br>
+      声ではない、曲の著作権は私ではなくその曲のクリエイターさんにあります。<br>
+      そちらに関する問題について外峯零は一切の責任を取りません。<br>
+      性的な目的での利用・AI学習/音声生成は禁止、また署名/宣伝/布教/勧誘/売名/顕示目的での利用はお控えください。</p>
 
     <h2>Q2. ファンアート（形態不問）を作ってもいい？</h2>
-    <p>外峯零のキャラクターデザイン・独自世界観等の利用は <em>個人・非営利</em> に限り許可します。その他用途はご連絡ください。作成いただいたFAは、当方からクレジットを添えて紹介・再掲させていただく場合があります（不都合があればお知らせください）。性的な目的・AI学習/画像生成は禁止です。</p>
+    <p>外峯零のキャラクターデザイン・独自世界観等の利用は <em>個人・非営利</em> に限り許可します。その他用途はご連絡ください。<br>
+      作成いただいたFAは、当方からクレジットを添えて紹介・再掲させていただく場合があります（不都合があればお知らせください）。<br>
+      性的な目的・AI学習/画像生成は禁止です。</p>
 
     <h2>Q3. 配信の切り抜き動画を作っていい？</h2>
     <p>収益化なし・コメントOFFを条件にご自由にどうぞ。</p>
@@ -46,10 +51,14 @@
   <!-- === 韓国語 === -->
   <div class="lang-content" id="lang-ko">
     <h2>Q1. 커버곡 음원을 사용해도 될까요?</h2>
-    <p>개인적 용도로 사용 시에는 별도의 연락이나 허가는 필요하지 않습니다. 크레딧에 <em>“가이네 누르 (外峯 零)”</em>를 표기해 주세요. 곡의 저작권은 원작 크리에이터에게 있으며, 가이네 누르는 일절 책임을 지지 않습니다. 성적 목적의 이용·AI 학습/음성 생성 금지, 서명·선전·포교·권유·마케팅 등 목적의 이용은 지양해 주세요.</p>
+    <p>개인적 용도로 사용 시에는 별도의 연락이나 허가는 필요하지 않습니다. <br>
+      크레딧에 <em>“가이네 누르 (外峯 零)”</em>를 표기해 주세요. <br>
+      곡의 저작권은 원작 크리에이터에게 있으며, 그로 인해 발생하는 문제에 가이네 누르는 일절 책임을 지지 않습니다. <br>
+      성적 목적의 이용·AI 학습/음성 생성 금지, 서명·선전·포교·권유·마케팅 등 목적의 이용은 지양해 주세요.</p>
 
     <h2>Q2. 팬아트(형태불문) 만들어도 되나요?</h2>
-    <p>캐릭터 디자인·세계관 등은 개인·비영리 용도에 한해 허가합니다. 그 외 용도는 연락 바랍니다. 제작된 팬아트는 크레딧과 함께 소개·재게시할 수 있습니다(불가 시 알려주세요). 성적 목적·AI 학습/이미지 생성 금지입니다.</p>
+    <p>캐릭터 디자인·세계관 등은 개인·비영리 용도에 한해 허가합니다. 그 외 용도는 연락 바랍니다. <br>
+      제작된 팬아트는 크레딧과 함께 소개·재게시할 수 있습니다(불가 시 알려주세요). <br>성적인 표현을 주로 하는 이용, AI 학습을 금합니다.</p>
 
     <h2>Q3. 방송 클립 따도 되나요?</h2>
     <p>수익화 없음·댓글 비허용 조건에서 자유롭게 사용 가능합니다.</p>
@@ -65,10 +74,16 @@
   <!-- === 英語 === -->
   <div class="lang-content" id="lang-en">
     <h2>Q1. Can I use Gaine Null vocal cover songs?</h2>
-    <p>For personal, non-commercial use, no prior contact is required. Please credit <em>“Gaine Null (外峯 零)”</em>. Song copyrights belong to the original creators; Gaine Null assume no liability for related issues. Erotic use and AI training/voice generation are strictly prohibited. Do not use for signing, promotion, solicitation, or self-promotion.</p>
+    <p>For personal, non-commercial use, no prior contact is required. <br>
+      Please credit <em>“Gaine Null (外峯 零)”</em>. <br>
+      Song copyrights belong to the original creators; Gaine Null assume no liability for related issues. <br>
+      Erotic use and AI training/voice generation are strictly prohibited. <br>
+      Do not use for signing, promotion, solicitation, or self-promotion.</p>
 
     <h2>Q2. Can I make artwork of Gaine Null?</h2>
-    <p>Use of character designs/worldbuilding is permitted for personal, non-commercial purposes only; contact here for other uses. Gaine Null may showcase or repost your fan art with credit (tell us if not permitted). Erotic use and AI training/image generation are prohibited.</p>
+    <p>Use of character designs/worldbuilding is permitted for personal, non-commercial purposes only; contact here for other uses. <br>
+      Gaine Null may showcase or repost your fan art with credit (tell us if not permitted). <br>
+      Erotic use and AI training/image generation are prohibited.</p>
 
     <h2>Q3. Can I make highlight clips?</h2>
     <p>Allowed as long as they are not monetized and comments are disabled.</p>
