--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,7 @@
 
   <!-- 言語タブ -->
 <div class="lang-tabs" role="tablist" aria-label="言語切替">
-  <button type="button" role="tab" id="tab-ja" data-lang="ja" aria-controls="lang-ja" aria-selected="true" class="active">日本語</button>
+  <button type="button" role="tab" id="tab-ja" data-lang="ja" aria-controls="lang-ja" aria-selected="false">日本語</button>
   <button type="button" role="tab" id="tab-ko" data-lang="ko" aria-controls="lang-ko" aria-selected="false">한국어</button>
   <button type="button" role="tab" id="tab-en" data-lang="en" aria-controls="lang-en" aria-selected="false">English</button>
 </div>
