--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
   <div id="header"></div>
 
 <section class="panel" aria-labelledby="terms-title">
-  <h1 id="terms-title">各ガイドライン・利用規約</h1>
+  <h1 id="terms-title">Guideline for Fan Artwork</h1>
   <p class="note">最終更新：2024年8月25日</p>
 
   <!-- 言語タブ -->
