--- a/overview.html
+++ b/overview.html
@@ -14,6 +14,22 @@
   <p>所在地：漆谷県江縫栄市北司零寺2-1-1</p>
 </section>
 
+ <section class="panel"> 
+  <h1>履歴</h1>  
+<p>2011年12月18日　初投稿～<br>
+<br>
+2022年2月10日　YouTube初配信<br>
+2024年6月21日　2.0モデルお披露目<br>
+2024年11月30日　ユニット【詠花】結成<br>
+2025年1月16日　登録者数1000人達成<br>
+2025年6月9日　資料集【世界の外側：江縫栄市】発売<br></p>
+
+  <h2>出演等</h2>
+  <p>2024年4月17日　　steamゲーム【Exanimum: The Silent Call】PR配信<br>
+2024年12月31日　　「歌ってみたメモリーズ2024」企画参加・支援（曲提供：BuzzG様）<br>
+2025年6月28日～7月4日　　「ときぱれ！VOL.14〜VTuberときめきパレード〜」オフライントークショーゲスト<br>
+  </section>
+  
 <section class="panel">
   <h2>施設について</h2>
   <p>大型病院の形をしている施設です。総9階建の、あらゆる分野から皆様をケアできるよう努めて参ります。</p>
