--- a/insidemail55.html
+++ b/insidemail55.html
@@ -169,11 +169,11 @@ Null을 자신들의 "딸"로 여기기로 했네.<br>
 }
 .lang-tabs button{
   flex:1; padding:8px 12px; border:1px solid var(--line);
-  border-radius:8px; background:#fff; cursor:pointer;
+  border-radius:8px; background:#ddd; cursor:pointer;
   font-family:"Inter","Noto Sans JP",sans-serif;
 }
 .lang-tabs button.active{
-  background:var(--accent); color:#fff; border-color:var(--accent);
+  background:var(--accent); color:#ddd; border-color:var(--accent);
 }
 .lang-content{display:none;animation:fade .2s ease-in;}
 @keyframes fade{from{opacity:0}to{opacity:1}}
