--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -292,7 +292,7 @@ const ice = [
 
 const dessert = [
   {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"},
-  {name:"Apple Cinnamon",hex:"#B0885C",pantone:"PANTONE 17-1045 TCX",memo:"秋のぬくもり。"},
+  {name:"Apple Cinnamon",hex:"#B0885A",pantone:"PANTONE 17-1045 TCX",memo:"秋のぬくもり。"},
   {name:"Ambrosia",hex:"#B9CAB0",meta:"PANTONE 12-0109 TCX",memo:"盛り合わせた健康な甘さ。"},  
   {name:"Macaroon",hex:"#B38B71",meta:"PANTONE 16-1323 TCX",memo:"一口サイズのお月さま。"},
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
