--- a/utamihon.html
+++ b/utamihon.html
@@ -403,6 +403,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=kaUv8IMOdnU">毒林檎</a><br/>
 渡月橋〜君想ふ〜<br/>
 とても痛い痛がりたい<br/>
+<a href="https://www.youtube.com/watch?v=Samc4CTsEN0">とても素敵な六月でした</a><br/>
 トラッシュ・アンド・トラッシュ！<br/>
 <a href="https://www.youtube.com/watch?v=PZSI0Ys1gkw">ドラマツルギー</a><br/>
 <a href="https://www.youtube.com/watch?v=Q_vO0f9pg-c">トワイライトライト</a><br/>
@@ -477,6 +478,7 @@ siGrE<br/>
 ハロ／ハワユ<br/>
 Hello､ 星を数えて<br/>
 <a href="https://www.youtube.com/watch?v=ahgTu3ql85k">パンこげこげになっちゃった</a><br/>
+<a href="https://www.youtube.com/watch?v=w0bdfm2T5bQ">晩餐歌</a><br/>
 パンダヒーロー<br/>
         <br/>
         <br/>
@@ -486,6 +488,7 @@ Hello､ 星を数えて<br/>
 <a href="https://www.youtube.com/watch?v=ayfjavAkXNU">ビターチョコデコレーション</a><br/>
 <a href="https://www.youtube.com/watch?v=AmjaICT9nno">ひつじがいっぴき</a><br/>   
 ヒッチコック<br/>
+<a href="https://www.youtube.com/watch?v=szb2X_9RZlk>人マニア</a><br/>
 <a href="https://www.youtube.com/watch?v=9wTAdirmPGA">独りんぼエンヴィー</a><br/>
 <a href="https://www.youtube.com/watch?v=wGvCsnbq6Og">ヒバナ</a><br/>
 <a href="https://www.youtube.com/watch?v=pUeHrk4tegg">ヒビカセ</a><br/>
@@ -548,6 +551,7 @@ PONPONPON<br/>
 <h3>ま</h3><br/>
 <a href="https://www.youtube.com/watch?v=Wf_afv23Yl4">マーシャル・マキシマイザー</a><br/>
 <a href="https://www.youtube.com/watch?v=ePLAOFqqOAM">マインドブランド</a><br/>
+<a href="https://www.youtube.com/watch?v=3fdCHlbSHm4">マシュマロ</a><br/>
 魔女<br/>
 <a href="https://www.youtube.com/watch?v=ZR-wyTqHrLI">街</a><br/>
 <a href="https://www.youtube.com/watch?v=kOVnoZd0E9s">祭りだヘイカモン</a><br/>
