--- a/irrtumderwelt.html
+++ b/irrtumderwelt.html
@@ -83,6 +83,7 @@
 ================================================================================<br>
 　　　　　　　　　　　　　  ██県██市██████　█████████████<br>
 ================================================================================<br>
+<a href="https://gainenull.org/irrtumderwelt-k">KO</a><br> <a href="https://gainenull.org/irrtumderwelt-e">EN</a><br>
 <br>
 <br>
 <br>
@@ -156,7 +157,6 @@
 <br>
 <br>
 <br>
-<a href="irrtumderwelt-k.html">KO</a><br> <a href="irrtumderwelt-e.html">EN</a><br>
 --------------------------------------------------------------------------------<br>
 また、本個体が「空白の概念」であっても、<br>
 完全にその性質や力を理解しているわけではないというのは面白い。<br>
