--- a/irrtumderwelt-e.html
+++ b/irrtumderwelt-e.html
@@ -111,6 +111,8 @@ END OF REPORT
 ================================================================================
                           ██████　█████████████, ██, ████
 ================================================================================
+<a href="https://gainenull.org/irrtumderwelt">JP</a>
+<a href="https://gainenull.org/irrtumderwelt-k">KO</a>
 
 
 
@@ -184,8 +186,6 @@ END OF REPORT
 
 
 
-<a href="irrtumderwelt.html">JP</a>
-<a href="irrtumderwelt-k.html">KO</a>
 --------------------------------------------------------------------------------
 It's also interesting that even though this entity is the "concept of blank", 
 It does not fully understand its nature or power, which is intriguing.
