--- a/news.html
+++ b/news.html
@@ -11,9 +11,10 @@
 
 <h1>お知らせ</h1>
 <ul class="list">
-  <li>譎ゅ?豬√ｌ縺碁?縺吶℃繧九</li>
-  <li>辟｡讖溽黄鬆ｭ蜒上?蛟倶ｽ薙?逧?ｧ倥∈</li>
   <li>蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</li>
+  <li><a href="https://gainenull.org/notice404">四月馬鹿のお報せ（2023年版）</a></li>
+  <li><a href="https://gainenull.org/irrtumderwelt">譛?謔ｪ縺ｮ轣ｽ蜴?</a></li>
+  <li><a href="https://gainenull.org/insidemail55">見つけられていない方々のため</a></li>
 </ul>
   
   <div id="footer"></div>
